--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,8 +72,8 @@
                 </button>
                 </a>
             {% else %}
-                <a href="{{ path("user_login") }}" class="mdl-layout__tab">Login</a>
-                <a href="{{ path("user_register") }}" class="mdl-layout__tab">Register</a>
+                <a href="{{ path("user_login") }}" class="mdl-layout__tab" id="nav1">Login</a>
+                <a href="{{ path("user_register") }}" class="mdl-layout__tab" id="nav2">Register</a>
             {% endif %}
         </div>
     </header>
